need to figure out network communities

--- a/app/components/networks/network.dashboard.html
+++ b/app/components/networks/network.dashboard.html
@@ -1,4 +1,4 @@
-<div ng-controller="NetworkController">
+<div>
 
     <div class="row">
         <div class="col-md-4">
@@ -13,7 +13,7 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.people.data" labels="charts.people.labels" series="charts.people.series" colours="charts.people.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="net.charts.people.data" labels="net.charts.people.labels" series="net.charts.people.series" colours="net.charts.people.colors" options="net.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -86,8 +86,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.startups.data"
-                                labels="charts.startups.labels" series="charts.startups.series" colours="charts.startups.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="net.charts.startups.data"
+                                labels="net.charts.startups.labels" series="net.charts.startups.series" colours="net.charts.startups.colors" options="net.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -160,8 +160,8 @@
                         </div>
                     </div>
                     <div class="col-xs-8" >
-                        <canvas class="chart chart-line" data="charts.jobs.data"
-                                labels="charts.jobs.labels" series="charts.jobs.series" colours="charts.jobs.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        <canvas class="chart chart-line" data="net.charts.jobs.data"
+                                labels="net.charts.jobs.labels" series="net.charts.jobs.series" colours="net.charts.jobs.colors" options="net.charts.options" height="95" style="padding: 0 15px;">
                         </canvas>
                     </div>
                     <div class="col-xs-2">
@@ -229,7 +229,7 @@
         <div class="col-md-6">
             <div class="hpanel forum-box">
 
-                <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
+                <div class="panel-heading">
                     <h3>Top Industries</h3>
                 </div>
 
@@ -319,7 +319,7 @@
         <div class="col-md-6">
             <div class="hpanel forum-box">
 
-                <div class="panel-heading" style="border-bottom: 2px solid #3498DB;">
+                <div class="panel-heading">
                     <h3>Top Networks</h3>
                 </div>
 
