--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -87,7 +87,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
                         <a ui-sref="industry.dashboard({community_key: nav.location, industry_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='industry'">
+                        <ul ng-if="nav.path.includes(item.key) && $state.includes('industry')">
                             <li ui-sref="industry.people({industry_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
@@ -104,10 +104,11 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
                         <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.current.name.split('.')[0]=='network'">
+                        <ul ng-if="nav.path.includes(item.key) && $state.includes('network')">
                             <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
+                            <li ui-sref="network.startups" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
