--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -70,8 +70,8 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations">
                         <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.includes('location')">
-                            <li ui-sref="location.people({community_key: item.key, query: '*'})" ui-sref-active="active">
+                        <ul ng-if="nav.community.key == item.key">
+                            <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
                             <li ui-sref="location.startups" ui-sref-active="active">
@@ -87,7 +87,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
                         <a ui-sref="industry.dashboard({community_key: nav.location, industry_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.includes('industry')">
+                        <ul ng-if="nav.community.key == item.key">
                             <li ui-sref="industry.people({industry_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
@@ -104,7 +104,7 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
                         <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
-                        <ul ng-if="nav.path.includes(item.key) && $state.includes('network')">
+                        <ul ng-if="nav.community.key == item.key">
                             <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
