startups on search and people clickthrough working

--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -74,7 +74,7 @@
                             <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
-                            <li ui-sref="location.startups" ui-sref-active="active">
+                            <li ui-sref="startups.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
