--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -284,7 +284,7 @@
                                 <h6>Bootstrap</h6>
                             </div>
                             <div class="stats-icon pull-right">
-                                <small class="text-muted">1 - 2</small>
+                                <small class="text-muted">0 - 500k</small>
                             </div>
                             <div style="margin-top:23px;">
                                 <h3 class="text-success">37</h3>
@@ -295,7 +295,7 @@
                                 <h6>Validation</h6>
                             </div>
                             <div class="stats-icon pull-right">
-                                <small class="text-muted">3 - 10</small>
+                                <small class="text-muted">500k - 1M</small>
                             </div>
                             <div style="margin-top:23px;">
                                 <h3 class="text-success">31</h3>
@@ -308,7 +308,7 @@
                                 <h6>Growth</h6>
                             </div>
                             <div class="stats-icon pull-right">
-                                <small class="text-muted">11 - 100</small>
+                                <small class="text-muted">1M - 5M</small>
                             </div>
                             <div style="margin-top:23px;">
                                 <h3 class="text-success">18</h3>
@@ -319,7 +319,7 @@
                                 <h6>Scale</h6>
                             </div>
                             <div class="stats-icon pull-right">
-                                <small class="text-muted">100+</small>
+                                <small class="text-muted">5M+</small>
                             </div>
                             <div style="margin-top:23px;">
                                 <h3 class="text-success">6</h3>
