--- a/app/less/various.less
+++ b/app/less/various.less
@@ -27,6 +27,14 @@
   padding-top: 2px;
 }
 
+.profile-team {
+  list-style: none;
+  display: block;
+  float: left;
+  padding-left: 5px;
+  padding-top: 2px;
+}
+
 .user-role {
   padding-left: 5px;
 }
