--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -69,7 +69,7 @@
                 <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.locations">
-                        <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                         <ul ng-if="nav.community.key == item.key">
                             <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
@@ -86,7 +86,12 @@
                 <a href="#"><span class="nav-label">Industries</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
-                        <a ui-sref="industry.dashboard({community_key: nav.location, industry_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="industry.dashboard({community_key: nav.location, industry_key: item.key, community: item})" ng-class="{active: nav.path.endsWith('/' + item.key)}">
+                            <span ng-if="item.community_profiles[nav.location]">
+                                <i ng-class="'fa ' + item.community_profiles[nav.location].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location].name}}</span>
+                            <span ng-if="!item.community_profiles[nav.location]">
+                                <i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</span>
+                        </a>
                         <ul ng-if="nav.community.key == item.key">
                             <li ui-sref="industry.people({industry_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
@@ -103,7 +108,7 @@
                 <a href="#"><span class="nav-label">Networks</span><span class="fa arrow"></span> </a>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
-                        <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes(item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.endsWith('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                         <ul ng-if="nav.community.key == item.key">
                             <li ui-sref="people.dashboard({community_key: item.key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
