--- a/app/components/locations/location.dashboard.html
+++ b/app/components/locations/location.dashboard.html
@@ -30,7 +30,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(3, 6) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(7, 11) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(9, 12) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(15, 18) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(19, 22) | limitTo: 2" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
@@ -171,7 +171,7 @@
                         </div>
                         <div class="col-md-2 project-people">
                             <p class="profile-label font-uppercase" style="font-size: 13px;  padding-top: 3px; margin-bottom: 7px;">Leaders</p>
-                            <img ng-repeat="leader in loc.leaders.slice(23, 28) | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
+                            <img ng-repeat="leader in loc.leaders | limitTo: 3" title="{{leader.value.profile.name}}" class="img-circle" src="{{leader.value.profile.avatar || leader.value.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}"/>
                         </div>
                     </div>
                 </div>
