--- a/app/less/various.less
+++ b/app/less/various.less
@@ -477,13 +477,18 @@ footer, .push {
   color: #bbb;
 }
 
-
 #side-menu.nav > li > a:hover, #side-menu.nav > li > a:focus {
   background: #fff;
 }
 
 #side-menu li.active {
   background: #fff;
+}
+
+.nav-third-level {
+  list-style: none;
+  padding-left: 30px !important;
+  font-size: 12px;
 }
 
 .arrow {
