--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -9,7 +9,10 @@
 
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb">
-                    <li><a href="{{'/' + content.community.key}}">{{ content.community.profile.name }}&nbsp;&nbsp;/</a></li>
+                    <li><a href="{{'/' + content.community.key}}">
+                        <span ng-if="content.community.community_profiles[nav.location]">{{ content.community.community_profiles[nav.location].name }}</span>
+                        <span ng-if="!content.community.community_profiles[nav.location]">{{ content.community.profile.name }}</span>
+                            &nbsp;&nbsp;/</a></li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                         <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
                         <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
