network embed with search working

--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -13,7 +13,7 @@
                         <i class="pe-7s-search"></i>
                     </a>
                 </li>
-                <form id="searchform" ng-submit="nav.search(search.query)" role="search" class="navbar-form-custom" method="post">
+                <form id="searchform" ng-submit="header.search(search.query)" role="search" class="navbar-form-custom" method="post">
                     <input ng-model="search.query" type="text" placeholder="Search {{header.searchname}}.." class="form-control" name="search">
                 </form>
             </div>
