fixed wrap issue for search bar

--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -7,8 +7,8 @@
     </div>
     <nav role="navigation">
         <div class="navbar-left">
-            <div class="nav navbar-nav no-borders">
-                <li>
+            <div class="nav navbar-nav no-borders" style="white-space: nowrap;">
+                <li style="float: left;">
                     <a onclick="$('#searchform').submit()">
                         <i class="pe-7s-search"></i>
                     </a>
