--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -9,8 +9,8 @@
         <nav role="navigation">
             <minimaliza-menu></minimaliza-menu>
             <div class="navbar-left">
-                <div class="nav navbar-nav no-borders">
-                    <li>
+                <div class="nav navbar-nav no-borders" style="white-space: nowrap;">
+                    <li style="float: left;">
                         <a onclick="$('#searchform').submit()">
                             <i class="pe-7s-search"></i>
                         </a>
