--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -1,6 +1,6 @@
 <!-- Header -->
 <div id="header">
-    <div class="bright-line">
+    <div class="grey-line">
     </div>
     <div id="logo" class="light-version">
         <img src="images/sc_logo.png"/>
