--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -93,6 +93,14 @@ body {
   background-repeat: no-repeat;
 }
 
+.grey-line {
+  height: 1px;
+  background: #eee;
+  background-size: 100% 4px;
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+}
+
 .color-line {
   background: @color-bright;
   height: 6px;
