--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -3,7 +3,7 @@
     <div class="grey-line">
     </div>
     <div id="logo" class="light-version">
-        <img src="images/sc_logo.png"/>
+        <a href="https://startupcommunity.org" target="_blank"><img src="images/sc_logo.png"/></a>
     </div>
     <nav role="navigation">
         <div class="navbar-left">
@@ -24,6 +24,6 @@
 
 <!-- Main Content -->
 <div style="padding-top: 87px;">
-    <div class="content" ui-view></div>
+    <div ui-view></div>
 
 </div>
