--- a/app/components/people/people.dashboard.html
+++ b/app/components/people/people.dashboard.html
@@ -84,8 +84,8 @@
                 <div class="pull-right">
                     <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="people.users.prev"><a ng-click="people.search(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="people.users.next"><a ng-click="people.search(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.searchUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.searchUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
                 <!--
@@ -106,8 +106,8 @@
                 <div class="row">
                     <td style="border-bottom: 1px solid #fff; border-top: none; padding: 0;" colspan="3"></td>
                 </div>
-                <div ng-show="people.tag" style="text-align: center" ng-cloak><h2><br/>Searching for {{people.tag}}..</h2><br/><br/></div>
-                <div ng-show="people.users.results.length == 0" style="text-align: center" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
+                <div ng-show="people.tag" style="text-align: center;" ng-cloak><h2><br/>Searching for {{people.tag}}..</h2><br/><br/></div>
+                <div ng-show="people.users.results.length == 0" style="text-align: center;" ng-cloak><h2><br/>Nothing here!</h2><br/><br/></div>
                 <div ng-repeat="item in people.users.results" ng-switch on="$index % 2" style="margin-top: 10px;">
                     <div class="col-md-6" ng-switch-when="0">
                         <div class="row"  ng-include="'components/people/people.dashboard.list.html'"></div>
@@ -121,8 +121,8 @@
                 <div class="pull-right">
                     <strong>{{people.users.start}} - {{people.users.end}}</strong> of <strong>{{people.users.total_count}}&nbsp;&nbsp;</strong>
                     <div class="btn-group btn-group-sm" style="margin-top: -2px;">
-                        <span ng-if="people.users.prev"><a ng-click="people.search(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
-                        <span ng-if="people.users.next"><a ng-click="people.search(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
+                        <span ng-if="people.users.prev"><a ng-click="people.searchUsers(people.users.prev)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-left"></i></a></span>
+                        <span ng-if="people.users.next"><a ng-click="people.searchUsers(people.users.next)" class="btn btn-sm btn-default" style="background-color: #fff;"><i class="fa fa-angle-right"></i></a></span>
                     </div>
                 </div>
             </div>
