--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -23,7 +23,7 @@
 </div>
 
 <!-- Main Content -->
-<div style="padding-top: 87px;">
+<div id="main_content" style="padding-top: 87px;">
     <div ui-view></div>
 
 </div>
