--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -28,9 +28,14 @@
                             <i class="pe-7s-help1"></i>
                         </a>
                     </li>
-                    <li class="dropdown">
+                    <li ng-if="nav.user" class="dropdown">
                         <a tooltip-placement="left" tooltip="Sign Out" ui-sref="logout" style="padding-right: 30px;">
                             <i class="pe-7s-upload pe-rotate-90"></i>
+                        </a>
+                    </li>
+                    <li ng-if="!nav.user" class="dropdown">
+                        <a tooltip-placement="left" tooltip="Sign In" ui-sref="login" style="padding-right: 30px;">
+                            <i class="pe-7s-download pe-rotate-90"></i>
                         </a>
                     </li>
                 </ul>
@@ -41,7 +46,7 @@
     <!-- Navigation -->
     <aside id="menu">
         <div class="profile-picture">
-            <div class="container side-menu" style="padding-top: 10px; margin-left: -20px;">
+            <div ng-if="nav.user" class="container side-menu" style="padding-top: 10px; margin-left: -20px;">
                 <div class="row side-menu">
                     <div class="col-sm-3">
                         <a ui-sref="people.profile({profile: nav.user, community_key: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
