--- a/app/components/common/header/header_embed.html
+++ b/app/components/common/header/header_embed.html
@@ -2,7 +2,7 @@
 <div id="header">
     <div class="grey-line">
     </div>
-    <div id="logo" class="light-version">
+    <div id="logo" class="light-version" style="border-right: 1px solid #e4e5e7; margin-right: 15px;">
         <a href="https://startupcommunity.org" target="_blank"><img src="images/sc_logo.png"/></a>
     </div>
     <nav role="navigation">
