--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -35,7 +35,7 @@
                     </li>
                     <li ng-if="!nav.user" class="dropdown">
                         <a tooltip-placement="left" tooltip="Sign In" ui-sref="login" style="padding-right: 30px;">
-                            <i class="pe-7s-download pe-rotate-90"></i>
+                            <i class="pe-7s-upload pe-rotate-90"></i>
                         </a>
                     </li>
                 </ul>
