--- a/app/components/people/people.profile.html
+++ b/app/components/people/people.profile.html
@@ -8,7 +8,7 @@
                             <img class="img-circle m-b" style="height:75px;" ng-src="{{profile.user.profile.avatar || profile.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{::profile.user.profile.name}}">
                         </div>
                         <div class="col-sm-10 col-lg-11" style="padding-bottom: 15px;">
-                            <div class="project-action" style="margin-right: -15px;">
+                            <div style="margin-right: -15px;">
                                 <div class="btn-group pull-right">
                                     <a href="#"><i class="fa fa-twitter btn btn-default btn-xs"></i></a>
                                     <a href="{{profile.user.profile.linkedin.publicProfileUrl}}" target="_blank"><i class="fa fa-linkedin btn btn-default btn-xs"></i>
