--- a/app/less/various.less
+++ b/app/less/various.less
@@ -510,6 +510,7 @@ footer, .push {
 
 .navbar-nav {
   margin: 0;
+  margin-left: -15px;
 }
 
 .navbar-static-top  {
@@ -904,6 +905,10 @@ a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.acti
 @media(max-width: 320px) {
   #wrapper {
     overflow: hidden;
+  }
+  .navbar-nav {
+    margin: 0;
+    margin-left: -15px;
   }
 }
 
