--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -29,14 +29,17 @@
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a tooltip-placement="left" tooltip="Sign Out" ui-sref="logout" style="padding-right: 30px;">
+                        <a tooltip-placement="left" tooltip="Log Out" ui-sref="logout" style="padding-right: 30px;">
                             <i class="pe-7s-upload pe-rotate-90"></i>
                         </a>
                     </li>
                     <li ng-if="!nav.user" class="dropdown">
-                        <a tooltip-placement="left" tooltip="Sign In" ui-sref="login" style="padding-right: 30px;">
-                            <i class="pe-7s-upload pe-rotate-90"></i>
-                        </a>
+                        <div style="margin-right: 8px;">
+                            <a tooltip-placement="left" tooltip="Log In" ui-sref="login" style="padding-right: 30px;">
+                                <i class="pe-7s-id" style="font-size: 28px; padding-left: 5px; padding-top: 6px;"></i>
+                                <div style="font-size: 12px;">Log In</div>
+                            </a>
+                        </div>
                     </li>
                 </ul>
             </div>
