--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -1,7 +1,7 @@
 <div>
     <!-- Header -->
     <div id="header">
-        <div class="bright-line">
+        <div ng-class="{'bright-line' : !nav.embedded, 'grey-line' : nav.embedded}">
         </div>
         <div id="logo" class="light-version">
             <img src="images/sc_logo.png"/>
