--- a/app/less/various.less
+++ b/app/less/various.less
@@ -311,8 +311,9 @@ footer, .push {
 /* Slider */
 #logo {
   float: left;
-  width: @menu-width;
+  width: 181px;
   background-color: @color-navy-blue;
+  border-right: 1px solid #e4e5e7;
   padding: 9px 20px 6px 18px;
   height: 61px;
   text-align: center;
@@ -510,7 +511,7 @@ footer, .push {
 
 .navbar-nav {
   margin: 0;
-  margin-left: -15px;
+  //margin-left: -15px;
 }
 
 .navbar-static-top  {
@@ -526,8 +527,8 @@ footer, .push {
   font-size: 14px;
   float: left;
   border-right:1px solid @border-color;
-  border-left:1px solid @border-color;
-  margin-right: 15px;
+  //border-left:1px solid @border-color;
+  //margin-right: 15px;
   background: @color-bright;
   cursor: pointer;
 }
