--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -24,8 +24,8 @@
                 <ul class="nav navbar-nav no-borders">
                     <li ng-if="!nav.user" class="dropdown">
                         <div style="padding-top: 21px;" ng-controller="LoginController as login">
-                            <a tooltip-placement="left" tooltip="Login" ng-click="login.authenticate('linkedin')">
-                                <div style="font-size: 16px;">Log In</div>
+                            <a tooltip-placement="left" tooltip="Login">
+                                <div ng-click="login.authenticate('linkedin')" style="font-size: 16px;">Log In</div>
                             </a>
                         </div>
                     </li>
